# BBD-AD

./: .gitignore  .gitmodules  cyclonedds.xml  cyclonedds_backbone.xml  fastrtps_backbone.xml  fastrtps_branch.xml  fastrtps_evaluator.xml  fastrtps_profile.xml  net_setup_desktop.sh  net_setup_orin1.sh  net_setup_orin2.sh  republish_all.sh
B2D_tcp/: run_eval_model_gpu.sh  run_eval_model_gpu_cpu.sh
B2D_tcp/Bench2DriveZoo/: requirement.txt
B2D_tcp/tcp_msgs/: CMakeLists.txt  package.xml
B2D_tcp/tcp_msgs/msg/: TCPBranchOutput.msg  TickTrigger.msg
B2D_tcp_uniad/: run_eval_model_gpu.sh  run_eval_model_gpu_cpu.sh  setup_test.py
B2D_tcp_uniad/Bench2Drive/: Bench2DriveZoo
B2D_tcp_uniad/Bench2DriveZoo/: requirement.txt  requirements.txt
B2D_tcp_uniad/bbd_msgs/: CMakeLists.txt  package.xml
docker/: Dockerfile  run.sh  run_bridge.sh  run_cuda.sh  run_e2e.sh  run_leaderboard.sh  run_lib.sh  run_user.sh
jw_ws/log/: tcp_50pts  tcp_merge_50pts  (+4 more)
scripts/: analyze_bag.py  analyze_bag_2.py  analyze_dual_timing.py  analyze_dual_timing_distributed_filter.py  analyze_dual_timing_filter.py  analyze_meta_latency.py  analyze_meta_latency_2.py  analyze_single_timing_filter.py  analyze_throughput_pcap.py  anaylze_tick_csv.py  auto_draw_memory.sh  auto_draw_memory_smooth.sh  auto_draw_metrics.sh  auto_draw_metrics_smooth.sh  draw_distributed_timing_diagram.py  draw_dual_timing.py  draw_dual_timing_diagram.py  draw_gpu_cpu_smooth.py  draw_gpu_smooth.py  draw_single_timing_diagram.py  generate_video.py  record_bag.sh  run_backbone_log_gpu_usage.sh  run_branch_log_gpu_usage.sh
(+272 files in other folders)
