cmake_minimum_required(VERSION 3.8)
project(tcp_msgs)

find_package(ament_cmake REQUIRED)
find_package(std_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/TCPBackboneOutput.msg"
  "msg/TCPBranchOutput.msg"
  "msg/TickTrigger.msg"
  DEPENDENCIES builtin_interfaces
  DEPENDENCIES std_msgs
)

ament_package()
