<package format="3">
  <name>tcp_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for TCP backbone output</description>

  <maintainer email="jiwon.moon817@gmail.com">Jiwon Moon</maintainer>
  <license>MIT</license>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <build_depend>builtin_interfaces</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>

</package>

